# constrained-convex-hulls

./: .gitignore  README.md  main.py  pyproject.toml
constrained_convex_hull/: __init__.py  core.py  svgutils.py  util.py
constrained_convex_hulls/: core.py
scripts/: analytical_examples.py  analytical_random_tests.py  cch.py  example_polygons.py  padding.py  poly.py  uniform_padding.py
