[project]
name = "constrained-convex-hull"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "drawsvg>=2.4.1",
    "numpy>=2.4.4",
    "pycddlib>=3.0.2",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
