[project]
name = "constrained-convex-hull"
version = "0.1.0"
description = "Simple utilities and demos of constrained convex hulls."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "drawsvg>=2.4.1",
    "numpy>=1.26.4",
    "pycddlib>=3.0.2",
    "scipy>=1.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
